--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,25 @@
 body {
-    font-family: 'Courier New', Courier, monospace, sans-serif;
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
     margin: 0;
     padding: 20px;
-}
-
-h1 {
+  }
+  
+  h1 {
     text-align: center;
-}
-
-#weather-info {
-    text-align: center;
-    font-size: 24px;
+    color: #333;
     margin-top: 20px;
-}
+    padding: 10px;
+    background-color: #e7b7b7;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  #weather-info {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #ec7f7f;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
