--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ body {
   }
   
   h1 {
+    border: 1px solid black;
+    padding: 10px;
     text-align: center;
     color: #333;
     margin-top: 20px;
@@ -14,8 +16,15 @@ body {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
+
+  .title-wrapper {
+    display: inline-block;
+    padding: 10px;
+  }
   
   #weather-info {
+    border: 1px solid black;
+    padding: 10px;
     margin-top: 20px;
     padding: 10px;
     background-color: #ec7f7f;
