--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body {
 
 #header {
   display: flex;
-  justify-content: flex-end;
 }
 
 .date-time {
@@ -22,6 +21,7 @@ body {
 }
 
 #current-date {
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -31,6 +31,7 @@ body {
 }
 
 h1 {
+  font-size: 70px;
   display: inline-block;
   padding: 10px;
   text-align: center;
@@ -41,7 +42,6 @@ h1 {
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
 
 #weather-info {
   border: 1px solid black;
@@ -57,9 +57,13 @@ h1 {
 
 .weather-details {
   margin-left: 20px;
+  margin-right: 20px;
+  /* text-align: center; */
+  font-size: 25px;
 }
 
 #weather-icon {
+  align-self: flex-start;
   font-size: 48px;
   margin-bottom: 10px;
 }
@@ -74,3 +78,54 @@ h1 {
 #pressure {
   margin-top: 5px;
 }
+
+.clock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  font-size: 50px;
+  color: #333;
+}
+
+#time,
+#calendar {
+  padding: 10px;
+}
+
+
+#sidebar {
+  margin: 10px;
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 20px;
+  background-color: #dde4d3;
+  box-shadow: -2px 0 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
+.button-link {
+  margin-bottom: 10px;
+  
+}
+
+.button-link a {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-decoration: none;
+  color: #333;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.button-link a:hover {
+  background-color: #bfb4b4;
+}
+
