--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,16 @@ h1 {
   background-color: #dde4d3;
   box-shadow: -2px 0 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  z-index: 9999;
 }
-
+#map {
+  width: 800px;
+  height: 400px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-top: 10px;
+  align-items: flex-end;
+}
 .button-link {
   margin-bottom: 10px;
   
