--- a/styles.css
+++ b/styles.css
@@ -138,9 +138,57 @@ h1 {
 }
 
 @media (max-width: 480px) {
+  /* Стили для экранов с максимальной шириной 480px и меньше */
   
+  h1 {
+    font-size: 24px;
+  }
+  
+  .weather-details {
+    font-size: 16px;
+  }
+  
+  #weather-icon {
+    font-size: 36px;
+  }
+  
+  .clock {
+    font-size: 32px;
+  }
+  
+  #sidebar {
+    padding: 10px;
+  }
+  
+  #map {
+    height: 200px;
+  }
 }
 
 @media (min-width: 481px) {
+  /* Стили для экранов с минимальной шириной 481px и больше */
   
+  h1 {
+    font-size: 30px;
+  }
+  
+  .weather-details {
+    font-size: 18px;
+  }
+  
+  #weather-icon {
+    font-size: 48px;
+  }
+  
+  .clock {
+    font-size: 40px;
+  }
+  
+  #sidebar {
+    padding: 20px;
+  }
+  
+  #map {
+    height: 300px;
+  }
 }
