--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,11 @@ h1 {
 
 @media (max-width: 480px) {
   /* Стили для экранов с максимальной шириной 480px и меньше */
+
+  #current-date {
+    font-size: 18px;
+    font-weight: bold;
+  }
   
   h1 {
     font-size: 24px;
@@ -153,7 +158,7 @@ h1 {
   }
   
   .clock {
-    font-size: 10px;
+    font-size: 32px;
   }
   
   #sidebar {
@@ -167,6 +172,11 @@ h1 {
 
 @media (min-width: 481px) {
   /* Стили для экранов с минимальной шириной 481px и больше */
+
+  #current-date {
+    font-size: 18px;
+    font-weight: bold;
+  }
   
   h1 {
     font-size: 30px;
@@ -181,7 +191,7 @@ h1 {
   }
   
   .clock {
-    font-size: 20px;
+    font-size: 40px;
   }
   
   #sidebar {
